--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "description": "",
   "main": "index.js",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix"
+    }
+  },
   "scripts": {
     "start": "node src/dev.js",
     "build": "parcel build ./src/index.html",
@@ -56,6 +61,7 @@
     "eslint-plugin-react": "^7.20.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
+    "husky": "^4.2.5",
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.2"
   }
